--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["FaultierSP <faultiersp@decreation.org>"]
 description = "Generate a ZUGFeRD XML for European e-invoices."
 repository = "https://github.com/FaultierSP/zugferd_rust"
-licence = "Apache-2.0"
+license = "Apache-2.0"
 
 [dependencies]
 chrono = "0.4.38"
