--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ repository = "https://github.com/FaultierSP/zugferd_rust"
 license = "Apache-2.0"
 
 [dependencies]
-chrono = "0.4.39"
+chrono = { version = "0.4.39", default-features = false, features = ["alloc"] }
 quick-xml = { version = "0.37.2", features = ["serialize"] }
 serde = { version = "1.0.217", features = ["derive"] }
